2011-12-02  Martin Jambor  <mjambor@suse.cz>

PR tree-optimization/50622
	* tree-sra.c (load_assign_lhs_subreplacements): Force gimple operand
	if both lacc and racc are grp_partial_lhs.

	* testsuite/g++.dg/tree-ssa/pr50622.C: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@181908 138bc75d-0d04-0410-961f-82ee72b054a4